# chess-stat

./: .gitignore  main.py  pyproject.toml  requirements.txt  start_app.sh
app/: main.py
downloads/: macspacs_games_20250502_091735.csv  macspacs_games_20250502_091735.json  macspacs_games_20250502_134916.csv  macspacs_games_20250502_134916.json
static/css/: style.css
static/js/: main.js
templates/: index.html
